@@ -19,4 +19,6 @@
   }
   .archive-radius {
     border-radius:5px;
+    margin-left:3px;
+    margin-right:3px;
   }
