@@ -12,10 +12,12 @@ import {Store} from '@ngrx/store';
 import {AppState} from '@ofStore/index';
 import {buildConfigSelector} from '@ofSelectors/config.selectors';
 import { FormGroup, FormControl } from '@angular/forms';
-import { SendArchiveQuery } from '@ofStore/actions/archive.actions';
+import { SendArchiveQuery ,FlushArchivesResult} from '@ofStore/actions/archive.actions';
 import { DateTimeNgb } from '@ofModel/datetime-ngb.model';
 import { NgbDateStruct, NgbTimeStruct } from '@ng-bootstrap/ng-bootstrap';
 import { TimeService } from '@ofServices/time.service';
+import { TranslateService } from '@ngx-translate/core';
+
 
 export enum FilterDateTypes {
   PUBLISH_DATE_FROM_PARAM = 'publishDateFrom',
@@ -51,11 +53,11 @@ export class ArchiveFiltersComponent implements OnInit {
 
   archiveForm: FormGroup;
 
-  constructor(private store: Store<AppState>, private timeService: TimeService) {
+  constructor(private store: Store<AppState>, private timeService: TimeService,private translateService: TranslateService) {
     this.archiveForm = new FormGroup({
       tags: new FormControl(''),
       process: new FormControl(),
-      publishDateFrom: new FormControl(''),
+      publishDateFrom: new FormControl(),
       publishDateTo: new FormControl(''),
       activeFrom: new FormControl(''),
       activeTo: new FormControl(''),
@@ -102,6 +104,16 @@ export class ArchiveFiltersComponent implements OnInit {
     this.first$.subscribe(first => params.set('page', [first.toString()]));
     this.store.dispatch(new SendArchiveQuery({params}));
   }
+    clearFilters(): void {
+        this.store.dispatch(new FlushArchivesResult());
+        this.archiveForm.get("tags").setValue('');
+        this.archiveForm.get("process").setValue('');
+        this.archiveForm.get("publishDateFrom").setValue({date :'', time:{hour: 0, minute: 0}});
+        this.archiveForm.get("publishDateTo").setValue({date :'', time:{hour: 0, minute: 0}});
+        this.archiveForm.get("activeFrom").setValue({date :'', time:{hour: 0, minute: 0}});
+        this.archiveForm.get("activeTo").setValue({date :'', time:{hour: 0, minute: 0}});
+    }
+
 
 }
 
