@@ -6,14 +6,14 @@
 
 <ng-container [formGroup]="datetimeForm">
     <div class="form-row nomarginrow">
-        <div class="form-group col-md-8 nopaddingrow">
+        <div class="form-group col-8 nopaddingrow">
             <label for="date" translate>archive.filters.{{filterPath}}</label>
             <input (change)="onChange($event)" class="form-control" type="text" ngbDatepicker #nsd="ngbDatepicker" id="date" formControlName="date" (focus)="nsd.toggle()"
             placeholder="YYYY-MM-DD"/>
         </div>
-        <fieldset [disabled]="disabled" class="col-md-4 nopaddingrow">
+        <fieldset [disabled]="disabled" class="col-4 nopaddingrow">
             <legend class="accessibility">Time</legend>
-            <ngb-timepicker [(ngModel)]="time" formControlName="time"></ngb-timepicker>
+            <ngb-timepicker formControlName="time" ></ngb-timepicker>
         </fieldset>
     </div>
 </ng-container>
