@@ -86,12 +86,13 @@
       "publisher": "Publisher",
       "process": "Process",
       "tags": "Tags",
-      "publishDateFrom": "Publish Date From",
-      "publishDateTo": "Publish Date To",
+      "publishDateFrom": "Publish From",
+      "publishDateTo": "Publish To",
       "activeFrom": "Active From",
       "activeTo": "Active To"
     },
     "search": "Search",
+    "clear": "Clear",
     "noResult": "Your search did not match any results."
   },
   "button": {
