@@ -11,6 +11,7 @@
 * [OC-876] User Service : Implement group in JWT Token Option
 * [OC-402] As an Operator I want the archive screen to display an explicit message if no cards are found that match my filters
 * [OC-868] As an admin I would like to be able to hide the time filtrer : https://opfab.github.io/documentation/current/deployment/#_web_ui
+* [OC-864] As a user I want to be able to reset archives filters so I can change my search criteria => Add a space between the search button and the Minutes field
 
 == Bugs
 * [OC-772] Bug on archives screen: clear results when exiting archive page.
